# GAI-Learning-Ground

./: README.md
Explore Vector Databases/OpenSearch/: opensearch-cluster-configuration.postman_collection.json
Explore Vector Databases/OpenSearch/Installation/: Dockerfile  README.md  docker-compose.yml  opensearch.yml
Explore Vector Databases/OpenSearch/Installation/certs/: admin-key.pem  admin.pem  node1-key.pem  node1.pem  root-ca-key.pem  root-ca.pem
Explore Vector Databases/OpenSearch/NoteBook/: oss-deploy-model.ipynb  oss-load-split-index.ipynb  oss-search.ipynb
Explore Vector Databases/Weaviate/NoteBook/: installation.ipynb  weaviate.ipynb
Explore Vector Databases/Weaviate/weaviate_ingestion/: main.py  pyproject.toml
Explore Vector Databases/Weaviate/weaviate_ingestion/weaviate_ingestion/: sink.py  source.py  transform.py
Explore Vector Databases/Weaviate/weaviate_qa/: pyproject.toml
LLM/: README.md
